--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
             <optional>true</optional>
         </dependency>
         
+        <!-- Spring Boot Mail -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        
         <!-- Spring Boot Starter Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
