--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,11 @@
             <optional>true</optional>
         </dependency>
         
-        <!-- Spring Boot Mail -->
+        <!-- SendGrid for Email Sending -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.9.3</version>
         </dependency>
         
         <!-- Spring Boot Starter Test -->
